platform_versioned_docs/version-4.6.0/administer/templates/versioning.mdx
---
title: Versioning Templates
sidebar_label: Versioning
sidebar_position: 4
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="template-versioning" />

Versioning a template allows you to make changes over time to a template while retaining the current version/iteration. Resources (for example virtual clusters, namespaces) that are deployed with templates that have updated versions show up with a warning
indicating that a newer template version is available.

## Template version strings

When creating a virtual cluster from a template, you can specify a template version string. If omitted, the latest available version is selected by default.

You can use the `X` wildcard in the major, minor, or patch components of the version string to enable automatic upgrades. This allows virtual clusters to automatically update to newer compatible versions of the template.

For example given a template version `1.0.0`:

- If you set the version string to `1.X.X`, and a new template version `1.1.0` is added, the virtual cluster will automatically upgrade to `1.1.0`.
- If a version `2.0.0` is added instead, the virtual cluster is not upgraded, because the major version does not match.

To always upgrade to the latest available version, you can `X.X.X` as the version string.

:::note
Avoid using `X.X.X` unless necessary. Use the `X` placeholder only in the minor or patch position—for example, `1.X.X` or `1.2.X`—to maintain greater control over version updates.
:::

## Create a template version

You can add new versions to your templates using the UI. The steps are the same for all resources.

:::note
Alternatively, you can use a GitOps workflow by applying an updated `VirtualClusterInstance` resource to the vCluster Platform cluster using tools such as `kubectl` or Argo CD.
:::

:::info Semantic versioning
While not strictly mandatory, you should follow standard [semantic versioning](https://semver.org)
practices for your template versioning. vCluster Platform refers to the version numbers provided when determining
whether to indicate if a template has a newer version available.
:::

<Flow id="create-template-version">
  <Step>
    Select the <NavStep>Templates</NavStep> field on the left menu bar.
  </Step>
  <Step>Click the option for the resource you want to version on the templates pane.</Step>
  <Step>
    Find the template you want to add a new version to in
    the list of templates. Click the dropdown list next
    to the name of your desired template. From the dropdown
    menu, click <Label>Add New Version</Label>.
  </Step>
  <Step>
    In the pop-up window, enter the new version string for your App. Then,
    click
    <Button>Add New Version</Button>.
  </Step>
  <Step>
    In the menus displayed in the right, make any modifications desired
    for your new template version.
  </Step>
  <Step>
    Click <Button>Save Changes</Button>.
  </Step>
</Flow>



## Update a template 

You can change the template and/or template version in the UI.

<Flow id="change-vcluster-template-ui">
  <Step>
    Select the <NavStep>Projects</NavStep> field on the left menu.
  </Step>
  <Step>
    From the project dropdown menu, select the project containing the resource you want to update.
  </Step>
  <Step>Click the option on the project pane.</Step>
  <Step>
    Click the dropdown arrow next to the name of the resource you want
    to modify.
  </Step>
  <Step>
    In the dropdown menu, select <Label>Change Template</Label>.
  </Step>
  <Step>
    In the pop-up window, select the name of the template from the drop-down
    list. The applied template is already selected, so if you
    are changing the template version, you don't need to do anything for
    this step.
  </Step>
  <Step>
    If the template you are selecting has multiple versions, you might see an
    additional version dropdown menu next to the template selector dropdown.
    Select your desired template version from this menu.
  </Step>
  <Step>
    Click <Button>Change Template</Button>.
  </Step>
</Flow>