platform_versioned_docs/version-4.11.0/administer/templates/versioning.mdx
---
title: Versioning Templates
sidebar_label: Versioning
sidebar_position: 4
sidebar_class_name: pro
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";
import FeatureTable from '@site/src/components/FeatureTable';
import InterpolatedCodeBlock from '@site/src/components/InterpolatedCodeBlock';

<FeatureTable names="template-versioning" />


Versioning a template allows you to make changes over time to a template while retaining the current version/iteration. Resources (for example tenant clusters, namespaces) that are deployed with templates that have updated versions show up with a warning
indicating that a newer template version is available.

## Template version strings

When creating a tenant cluster from a template, you can specify a template version string. If omitted, the latest available version is selected by default.

You can use the `X` wildcard in the major, minor, or patch components of the version string to enable automatic upgrades. This allows tenant clusters to automatically update to newer compatible versions of the template.

For example given a template version `1.0.0`:

- If you set the version string to `1.X.X`, and a new template version `1.1.0` is added, the tenant cluster will automatically upgrade to `1.1.0`.
- If a version `2.0.0` is added instead, the tenant cluster is not upgraded, because the major version does not match.

To always upgrade to the latest available version, you can `X.X.X` as the version string.

:::note
Avoid using `X.X.X` unless necessary. Use the `X` placeholder only in the minor or patch position—for example, `1.X.X` or `1.2.X`—to maintain greater control over version updates.
:::

## How template changes propagate to existing resources

Whether a template change reaches an already-created tenant cluster or namespace depends on whether the template is versioned.

For a **versioned** template, every reconcile re-evaluates the resource's version string against the versions available on the template, and applies whichever version matches. This is what makes wildcard version strings such as `1.X.X` self-updating. As soon as a new matching version is added, it's applied automatically. If a resource pins an exact version, edits to that specific version's configuration still propagate automatically, but adding a newer version alongside it does not, since the exact pin never matches anything else.

For a template with **no versions** (a single, unversioned `spec.template`), an edit to the template only reaches resources that reference it in three cases. The resource is being created for the first time, its `templateRef.syncOnce` field is set to `true`, or its version string is exactly `x.x.x`. Otherwise, the resource keeps running its last-applied configuration, and the platform UI surfaces the pending change as a **Template Changes Available** notice without applying it.

To force a one-time sync after editing an unversioned template, set `syncOnce` on the affected resource:

<InterpolatedCodeBlock
  code={
'spec:\n' +
'  templateRef:\n' +
'    name: [[VAR:TEMPLATE_NAME:my-template]]\n' +
'    syncOnce: true'
  }
  language="yaml"
/>

`syncOnce` resets to `false` automatically once the resource's template resolves, so it needs to be set again for any subsequent edit. A `TemplateResolved` failure, for example `ErrorRenderingTemplate`, leaves `syncOnce` set, since the sync never got that far. Once resolution succeeds, `syncOnce` clears even if applying the change afterward still fails. To have a resource pick up template edits automatically without setting `syncOnce` each time, use `x.x.x` as the version string instead, which behaves like a versioned template's wildcard match even though the referenced template itself has no versions.

Unlike the `X`/`x` wildcards on a versioned template, which match regardless of case, this `x.x.x` sentinel is checked as an exact, case-sensitive string. `X.X.X` doesn't trigger it. The version gets cleared instead, and the resource falls back to needing `syncOnce` for each edit.

If a template change doesn't reach a resource the way you expect, see [Troubleshoot template and app sync failures](../../troubleshoot/template-sync-failures.mdx).

## Create a template version

You can add new versions to your templates using the UI. The steps are the same for all resources.

:::note
Alternatively, you can use a GitOps workflow by applying an updated VirtualClusterInstance resource to the vCluster Platform cluster using tools such as `kubectl` or Argo CD.
:::

:::info Semantic versioning
While not strictly mandatory, you should follow standard [semantic versioning](https://semver.org)
practices for your template versioning. vCluster Platform refers to the version numbers provided when determining
whether to indicate if a template has a newer version available.
:::

<Flow id="create-template-version">
  <Step>
    Go to <NavStep>Tenant Management</NavStep> and select the template type you want to version.
  </Step>
  <Step>
    Find the template you want to add a new version to in
    the list. Click the actions menu next to its name and click <Label>Add New Version</Label>.
  </Step>
  <Step>
    In the pop-up window, enter the new version string for your App. Then,
    click
    <Button>Add New Version</Button>.
  </Step>
  <Step>
    In the menus displayed in the right, make any modifications desired
    for your new template version.
  </Step>
  <Step>
    Click <Button>Save Changes</Button>.
  </Step>
</Flow>



## Update a template 

You can change the template and/or template version in the UI.

<Flow id="change-vcluster-template-ui">
  <Step>
    Select the project containing the resource using the project selector dropdown.
  </Step>
  <Step>Click the resource type on the project page.</Step>
  <Step>
    Click the actions menu next to the resource you want to modify and select <Label>Change Template</Label>.
  </Step>
  <Step>
    In the pop-up window, select the name of the template from the list. The applied template is already selected, so if you
    are changing the template version, you don't need to do anything for
    this step.
  </Step>
  <Step>
    If the template has multiple versions, a version selector appears next to the template selector.
    Select your desired template version.
  </Step>
  <Step>
    Click <Button>Change Template</Button>.
  </Step>
</Flow>